Added a icon for the website

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css"/>
 
+    <link rel = "icon" href = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSCI1pJq-T0JmDpomqPR4CKQZsol_8e1zRGsA&usqp=CAU.png" type = "image/x-icon">
 
 
 <title>BookStore</title>
